# emerald

./: Cargo.toml
src/: emerald.rs  fs.rs  jewel.rs  lib.rs  main.rs  path.rs
src/script/: fs.rs  mod.rs
src/shard/: header.rs  mod.rs  task.rs  value.rs
src/shard/ast/: frontmatter.rs  mod.rs  node.rs  walker.rs
src/shard/ast/node/: arena.rs  debug.rs  display.rs  mod.rs  ref.rs  writer.rs
tests/: common.rs  fs_test.rs  script_test.rs
